--- a/Insight.ipynb
+++ b/Insight.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "443ab7d1",
+   "id": "f4c76a30",
    "metadata": {},
    "source": [
     "# 1. Đọc dữ liệu"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "660aac29",
+   "id": "8c6a8f86",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7697e5aa",
+   "id": "4f635dbc",
    "metadata": {},
    "source": [
     "# 2. Xử lý dữ liệu"
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2754ff54",
+   "id": "02a5de40",
    "metadata": {},
    "source": [
     "### 2.1. Thêm cột số môn thi"
@@ -564,7 +564,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2456c042",
+   "id": "949c0118",
    "metadata": {},
    "source": [
     "### 2.2. Làm sạch dữ liệu"
@@ -573,7 +573,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "e4f35cbe",
+   "id": "baa73319",
    "metadata": {},
    "outputs": [
     {
@@ -836,7 +836,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10aeac09",
+   "id": "2cc880c0",
    "metadata": {},
    "source": [
     "# 3. Thao tác dữ liệu"
@@ -844,7 +844,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "24365713",
+   "id": "eb6a52f7",
    "metadata": {},
    "source": [
     "### 3.1. Kiểm tra số thi sinh mỗi môn "
@@ -852,8 +852,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "id": "2f205c7f",
+   "execution_count": 74,
+   "id": "63f4cefc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -874,7 +874,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "c1979712",
+   "id": "044e136b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -884,8 +884,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "id": "57cb8196",
+   "execution_count": 76,
+   "id": "af47b067",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -897,7 +897,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3eb3a10b",
+   "id": "1f721cc2",
    "metadata": {},
    "source": [
     "#### Vẽ biểu đồ"
@@ -905,8 +905,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
-   "id": "ccf49f0c",
+   "execution_count": 82,
+   "id": "1921289d",
    "metadata": {},
    "outputs": [
     {
@@ -941,9 +941,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "53f6833d",
+   "metadata": {},
+   "source": [
+    "#### Rút ra kết luận"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af1faf89",
+   "id": "8fa11deb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "- Thí sinh thi tổ hợp KHXH (Sử + Địa + GDCD) không lệch quá nhiều so thí sinh thi tổ hợp KHTN (Lý + Hóa + Sinh). Chứng minh rằng\n",
+    "ở tỉnh Tiền Giang lượng thí sinh 2005 tham gia KHTN và KHXH là tương đương nhau.\n",
+    "- Toán và ngữ văn là các môn bắt buộc nên số thí sinh thi ở 2 môn này chênh lệch nhau không đáng kế\n",
+    "- Đối với trường hợp thí sinh tham gia thi Ngoại ngữ và GDCD lệch một chút so với Toán Văn hay Lịch sử và Địa lý có thể là do \n",
+    "điểm thi dự đoán của họ không tốt, dẫn đến việc bỏ thi các môn sau."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "29ed7b3b",
    "metadata": {},
    "outputs": [],
    "source": []
