--- a/Insight.ipynb
+++ b/Insight.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 22,
    "id": "8c6a8f86",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 23,
    "id": "017bc0d3",
    "metadata": {},
    "outputs": [
@@ -262,7 +262,7 @@
        "[15454 rows x 12 columns]"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 24,
    "id": "3a220513",
    "metadata": {},
    "outputs": [
@@ -576,7 +576,7 @@
        "[426 rows x 16 columns]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -605,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 25,
    "id": "25e42e71",
    "metadata": {},
    "outputs": [
@@ -857,7 +857,7 @@
        "[15454 rows x 13 columns]"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -871,7 +871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 26,
    "id": "ed456b2a",
    "metadata": {},
    "outputs": [
@@ -1208,7 +1208,7 @@
        "[426 rows x 19 columns]"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1237,7 +1237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 27,
    "id": "baa73319",
    "metadata": {},
    "outputs": [
@@ -1489,7 +1489,7 @@
        "[15454 rows x 13 columns]"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1502,7 +1502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 28,
    "id": "4555a3df",
    "metadata": {},
    "outputs": [
@@ -1839,7 +1839,7 @@
        "[426 rows x 19 columns]"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1868,7 +1868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 29,
    "id": "63f4cefc",
    "metadata": {},
    "outputs": [],
@@ -1903,7 +1903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 30,
    "id": "044e136b",
    "metadata": {},
    "outputs": [],
@@ -1916,7 +1916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 31,
    "id": "af47b067",
    "metadata": {},
    "outputs": [],
@@ -1924,7 +1924,7 @@
     "#Tính phần trăm thí sinh thi mỗi môn\n",
     "so_luong_thi_TG = [count_toan, count_van, count_ngoai_ngu, count_vat_ly, count_hoa_hoc, \n",
     "                count_sinh_hoc, count_lich_su, count_dia_ly, count_gdcd]\n",
-    "phan_tram_thi_TG = so_luong_thi / count_tong_TG\n",
+    "phan_tram_thi_TG = so_luong_thi_TG / count_tong_TG\n",
     "\n",
     "so_luong_thi_PVT = [count_toan_pvt, count_van_pvt, count_ngoai_ngu_pvt, count_vat_ly_pvt, count_hoa_hoc_pvt, \n",
     "                count_sinh_hoc_pvt, count_lich_su_pvt, count_dia_ly_pvt, count_gdcd_pvt]\n",
@@ -1941,7 +1941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 32,
    "id": "1921289d",
    "metadata": {},
    "outputs": [
@@ -2031,7 +2031,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.8.18"
   }
  },
  "nbformat": 4,
