--- a/Insight.ipynb
+++ b/Insight.ipynb
@@ -585,7 +585,7 @@
    ],
    "source": [
     "#Đọc dữ liệu điểm của trường Phan Việt Thống\n",
-    "diemPVT_raw = pd.read_excel('data_PhanVietThong.xls')\n",
+    "diemPVT_raw = pd.read_excel('data_PhanVietThong.xls') #xlrd\n",
     "diemPVT_raw"
    ]
   },
@@ -1989,7 +1989,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e84e27b",
+   "id": "76c40a86",
    "metadata": {},
    "source": [
     "- Tỉ lệ thí sinh tham gia thi môn Toán và Văn rất cao (gần 100%) vì đây là 2 môn bắt buộc. Không có sự chênh lệch đáng kể giữa thí sinh tham gia thi Toán, Văn của trường so với tỉnh.\n",
@@ -2002,7 +2002,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2cbfe3be",
+   "id": "ae785734",
    "metadata": {},
    "source": [
     "### 3.2. Phổ điểm của khối khoa học xã hội theo mật độ xác suất"
@@ -2011,7 +2011,7 @@
   {
    "cell_type": "code",
    "execution_count": 137,
-   "id": "6e109111",
+   "id": "c09d3d52",
    "metadata": {},
    "outputs": [
     {
@@ -2057,7 +2057,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a090de1",
+   "id": "5ccefe40",
    "metadata": {},
    "source": [
     "#### Vẽ biểu đồ"
@@ -2099,7 +2099,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b34d605e",
+   "id": "a0668ec9",
    "metadata": {},
    "source": [
     "#### Rút ra kết luận"
@@ -2107,7 +2107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0a1b30c9",
+   "id": "5c07d5bb",
    "metadata": {},
    "source": [
     "- Nhìn chung điểm trung bình khối xã hội của trường cao hơn so với tỉnh ở khoảng từ 6.5 đến 7.25 điểm ( cho thấy các học sinh khối khoa học xã hội của trường ở mức khá ).\n",
@@ -2118,7 +2118,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "581ac637",
+   "id": "0809304e",
    "metadata": {},
    "outputs": [],
    "source": []
