Nhan xet heatmap

--- a/Insight.ipynb
+++ b/Insight.ipynb
@@ -6361,7 +6361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 57,
    "id": "ac93cc50",
    "metadata": {},
    "outputs": [
@@ -6419,6 +6419,27 @@
     "axes[1, 1].tick_params(axis='both', which='both', labelsize=12)\n",
     "plt.tight_layout()\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ba00e31d",
+   "metadata": {},
+   "source": [
+    "#### Nhận xét"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "155aa7cf",
+   "metadata": {},
+   "source": [
+    "- Các heatmap này thể hiện mối liên hệ giữa các môn học thuộc các khối A0, B0, C0 và D0 của Tiền Giang. Màu càng nóng thể hiện mối liên hệ càng mạnh, ngược lại màu càng nhạt thể hiện mối liên hệ càng yếu.\n",
+    "- Hai heatmap đầu tiên (A0 và B0) thể hiện mối liên hệ giữa các môn học thuộc khối tự nhiên (Toán, Vật lý, Hóa học, Sinh học). Có thể thấy, các môn học trong khối tự nhiên có mối liên hệ chặt chẽ với nhau. Điều này là do các môn học này đều có chung một nền tảng kiến thức, bao gồm các khái niệm, định lý, phương pháp giải bài tập.\n",
+    "    + Cụ thể, mối quan hệ giữa Toán và các môn học khác trong khối tự nhiên đều ở mức cao (0.49 - 0.57). Toán học là môn học nền tảng cung cấp cho học sinh các kiến thức cần thiết để học các môn học khác trong khối tự nhiên. Ví dụ, để học về chuyển động, học sinh cần biết về các khái niệm như quãng đường, vận tốc, gia tốc,..., mà các khái niệm này đều được học trong môn Toán. Duy chỉ có Toán không có liên hệ mạnh mẽ với Sinh học (0.41) vì hai môn này nội dung hoàn toàn khác nhau nhưng Toán học vẫn hỗ trợ tính toán một phần cho Sinh học.\n",
+    "- Hai heatmap kế tiếp thể hiện mối liên hệ giữa Toán, các môn học thuộc khối xã hội (Văn, Lịch sử, Địa lý) và các môn học ngoại ngữ. Có thể thấy, các môn học thuộc khối xã hội có mối liên hệ với nhau không mạnh bằng tự nhiên, và giữa Văn và Ngoại ngữ cũng thế.\n",
+    "    + Cụ thể, mối quan hệ giữa Văn và Địa lý ở mức trung bình (0.37), giữa Văn và Ngoại ngữ chỉ khoảng 0.42. Điều này có thể đến từ việc kiến thức của các môn này khá khác nhau. \n",
+    "    + Đặc biệt, ta có thể thấy mối liên hệ giữa Toán và Ngoại ngữ lại lên đến 0.59. Điều này có thể bắt nguồn từ việc cả 2 môn đều cần đến khả năng tư duy logic, trừu tượng và ghi nhớ nhiều hơn so với các môn khác. Từ đó ta có thể suy luận rằng: học sinh giỏi Toán thì thường giỏi Ngoại ngữ và ngược lại. "
    ]
   }
  ],
