--- a/Insight.ipynb
+++ b/Insight.ipynb
@@ -5489,9 +5489,10 @@
    "id": "bdf4c3f7",
    "metadata": {},
    "source": [
-    "- Nhìn chung điểm trung bình khối xã hội của trường cao hơn so với tỉnh ở khoảng từ 6.5 đến 7.25 điểm ( cho thấy các học sinh khối khoa học xã hội của trường ở mức khá ). <br>\n",
-    "- Điểm trung bình khối xã hội ở trường và tỉnh đều tập trung chủ yếu ở khoảng điểm thi từ 6.25 đến 7.25, với mật độ xác suất cao. Điều này có thể chỉ ra rằng học sinh ở trường và tỉnh có xu hướng điểm ở khoảng khá. <br>\n",
-    "- Điểm trung bình khối xã hội của tỉnh cao nhất của tỉnh là lớn 9.25 nhưng ở trường thì lại không có. Nhưng bù lại điểm ở trường tất cả đều lớn hơn 5.0 trong khi ở tỉnh lại có khá nhiều điểm dưới 5.0."
+    "- Nhìn chung điểm trung bình khối xã hội của trường cao hơn so với tỉnh ở khoảng từ 6.5 đến 7.25 điểm. Cho thấy các học sinh khối khoa học xã hội của trường ở mức khá giỏi. ​\n",
+    "- Điểm trung bình khối xã hội ở trường và tỉnh đều tập trung chủ yếu ở khoảng điểm thi từ 6.25 đến 7.25, với mật độ xác suất cao. Điều này có thể chỉ ra rằng học sinh ở trường và tỉnh có xu hướng điểm ở khoảng khá. \n",
+    "- Điểm trung bình khối xã hội của tỉnh cao nhất của tỉnh là lớn 9.25 nhưng ở trường thì lại không có. Nhưng bù lại điểm ở trường tất cả đều lớn hơn 5.0 trong khi ở tỉnh lại có khá nhiều điểm dưới 5.0. Với mức điểm chủ yếu trên 5 ta có thể nhận thấy chất lượng giảng dạy của khối khoa học xã hội rất tốt đi kèm với đó là khả năng của học sinh đối với khối học này đều đạt trên mức trung bình.​\n",
+    "- Để đạt được được kết quả trên lí do cũng 1 phần truyền thống của trường đa số học sinh chọn học khối KHXH đều nhiều hơn KHTN(theo thông tin từ cựu học sinh) nên dựa vào đó trường cũng sẽ có những ưu ái tập trung hơn trong khối học này."
    ]
   },
   {
@@ -5862,9 +5863,9 @@
    "id": "3c463be5",
    "metadata": {},
    "source": [
-    "- Nhìn chung tỉ lệ đạt điểm môn Văn trên 8 của cả trường và tỉnh đều cao hơn so với Toán và Anh\n",
-    "- Tỉ lệ đạt trên 8 môn Văn của trường PVT cao hơn tỉnh, nhưng ngược lại thấp hơn ở môn Toán và môn Anh\n",
-    "- Tỉ lệ đạt trên 8 môn Anh của trường PVT rất thấp cho thấy môn Anh không phải thế mạnh của trường"
+    "- Nhìn chung tỉ lệ đạt điểm môn Văn trên 8 của cả trường và tỉnh đều cao hơn so với Toán và Anh. Điều này có thể nhận thấy được thế mạnh của tỉnh Tiền Giang là môn Văn, theo thống kê của trang http://baoapbac.vn điểm Văn của tỉnh Tiền Giang có tỉ lệ đạt trên 5 chiếm tới 98.1% xếp thứ 11 trong cả nước. Phần nào dẫn tới kết quả tốt này cũng là nhờ vào sự nỗ lực của các học sinh cũng như sự giảng dạy và chú trọng của các thầy cô để đưa ra được nội dung trọng tâm tốt trong môn Văn.​\n",
+    "- Tỉ lệ đạt trên 8 môn Văn của trường PVT cao hơn tỉnh, nhưng ngược lại thấp hơn ở môn Toán và môn Anh. Trường tuy chú trọng vào thế mạnh môn Văn nhưng chất lượng môn Toán và Anh lại không được tốt nên dẫn tới tỉ lệ 2 môn này thấp hơn so với tỉnh.\n",
+    "- Môn Anh là môn có tỉ lệ đạt điểm trên 8 thấp nhất, và cũng theo thống kê của http://baoapbac.vn tỉ lệ đạt điểm trên 5 của cả tỉnh Tiền Giang chỉ chiếm 57.7%. Lí giải cho lí do này 1 phần cũng do vào điều kiện kinh tế của tỉnh Tiền Giang dẫn tới chất lượng giảng dạy tiếng anh không được tốt. Để thấy điều kiện kinh tế ảnh hưởng như thế nào đối với chất lượng giảng dạy môn Tiếng Anh thì 2 thành phố lớn hiện nay là TPHCM là Hà Nội có điểm trunh bình tiếng anh cao nhất cả nước và đây cũng là 2 thành phố đi đầu trong nền kinh tế."
    ]
   },
   {
